syntax = "proto3";
//永远不要修改生成的代码，只能修改这里的代码
//使用方式protoc --java_out=src/main/java  src/protobuf/Studuent.proto
//产生class文件,具体其他生产方法，可以看官方文档.
package com.junhua.proto;

option optimize_for = SPEED; //加快解析速度，详细可以去官网查加快解析速度，不写默认是这个
option java_package = "com.junhua.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files=true;

service StudentService {
  rpc getRealNameByUsername(Request) returns (Response) {}
  // 以流的形式返回结果
  rpc getStudentsByAge(StudentRequest) returns (stream StudentResponse) {}
  // 以流的形式传如参数
  rpc getStudentsWrapperByAge(stream StudentRequest) returns (StudentResponseList) {}
  rpc biTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message Request {
  string username = 1;
}

message Response {
  string realname = 2;
}

message StudentRequest {
  int32 age=1;
}

message StudentResponse {
  string name = 1;
  int32 age = 2;
  string city = 3;
}

message StudentResponseList {
  repeated StudentResponse studentResponse = 1;
}

message StreamRequest {
  string requestInfo = 1;
}

message StreamResponse {
  string responseInfor = 1;
}